--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "reselect": "^4.1.4",
+    "styled-components": "^5.3.3",
     "web-vitals": "^1.0.1",
     "yup": "^0.32.11"
   },
